[SHIRO-671] added JSR-250 annotations (PermitAll, RolesAllowed, DenyAll)